# scarlet

./: .gitignore  README.md  pyproject.toml  scope.txt  test.md  test2.json
src/scarlet/: cli.py  indexer.py  scope.py  slither_index.py  solc_ast.py
src/scarlet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/scarlet/analyzers/: entrypoints.py  sinks.py
src/scarlet/report/: md.py
